<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2013-2014 Paul Stöhr
  ~
  ~ This file is part of TD.
  ~
  ~ TD is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>
    <!-- General -->
    <string name="app_name">TD</string>

    <!-- Navigation -->
    <string name="navigation_open">Open</string>
    <string name="navigation_close">Close</string>
    <string-array name="navigation">
        <item>@string/favorites_title</item>
        <item>@string/game_title</item>
        <item>@string/preference_title</item>
    </string-array>

    <!-- ActionBarItems -->
    <string name="action_refresh">Refresh</string>
    <string name="action_clear">Clear</string>
    <string name="action_search">Search</string>
    <string name="action_search_hint">Search stream</string>
    <string name="action_route"/>

    <!-- ErrorMessages -->
    <string name="error_unexpected">A unicorn has blocked the request, please contact the developer.</string>
    <string name="error_connection_error_title">Connexion error</string>
    <string name="error_connection_error_message">A connection error occurred. Please verify
        that you are connected to an EDGE, 3G or Wifi network.
    </string>
    <string name="error_data_error_title">Incorrect data</string>
    <string name="error_data_error_message">Received data invalid</string>
    <string name="error_stream_offline">Stream offline :(</string>
    <string name="error_no_player_title">No video player installed</string>
    <string name="error_no_player_message">In order to play videos you need
        to install an external video player, like VLC or MX Player.</string>
    <string name="error_internal_player">Unable to use internal Player</string>
    <string name="error_no_archived_videos">Twitch changed its API, videos are currently broken :(</string>

    <!-- DialogMessages -->
    <string name="dialog_error_title">Error</string>
    <string name="dialog_button_retry">Retry</string>
    <string name="dialog_progress_title">Loading</string>
    <string name="dialog_progress_message">Loading in progress…</string>
    <string name="dialog_username_title">Username</string>
    <string name="dialog_playlist_title">Video Playlist</string>
    <string name="dialog_stream_quality_title">Quality</string>
    <string name="dialog_stream_quality_default_value">Medium</string>
    <string-array name="dialog_stream_quality_entries" translatable="false">
        <item>Mobile</item>
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
        <item>Source</item>
    </string-array>

    <!-- Favorites -->
    <string name="favorites_title">Favorites</string>

    <!-- Channel -->
    <string name="channel_name">Channel-Name</string>
    <string name="channel_name_empty">No username defined\n\n<b>[Settings → Username]</b></string>
    <string name="channel_stream">Stream</string>
    <string name="channel_thumbnail">Thumbnail</string>
    <string name="channel_watch_stream">Watch Stream</string>
    <string name="channel_archives">Archives</string>
    <string name="channel_status">Status</string>
    <string name="channel_logo">Logo</string>
    <string name="channel_online">Online</string>
    <string name="channel_offline">Offline</string>
    <string name="channel_unknown">Unknown</string>
    <string name="channel_archives_empty">No archived videos</string>
    <string name="channel_detail_empty">Select a channel for details</string>
    <string name="channel_playing">Playing</string>

    <!-- Stream -->
    <string name="stream_viewers">Viewers</string>

    <!-- Search -->
    <string name="search_no_result">No streams found</string>

    <!-- Playlist -->
    <string name="playlist_part"><u>PART</u></string>
    <string name="playlist_slash">/</string>

    <!-- Settings -->
    <string name="preference_title">Settings</string>
    <string name="preference_internal_player">Use the internal Player</string>
    <string name="preference_licenses">Open Source Licenses</string>

    <!-- Game -->
    <string name="game_title">Game Overview</string>
    <string name="game_box">Box</string>

</resources>