<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2013-2014 Paul Stöhr
  ~
  ~ This file is part of TD.
  ~
  ~ TD is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:key="channel_name"
        android:dialogTitle="@string/dialog_username_title"
        android:title="@string/dialog_username_title"/>
    <ListPreference
        android:key="stream_quality"
        android:defaultValue="@string/dialog_stream_quality_default_value"
        android:dialogTitle="@string/dialog_stream_quality_title"
        android:entries="@array/dialog_stream_quality_entries"
        android:entryValues="@array/dialog_stream_quality_entries"
        android:title="@string/dialog_stream_quality_title"/>
    <!--<CheckBoxPreference-->
        <!--android:id="@+id/internal_player"-->
        <!--android:defaultValue="false"-->
        <!--android:title="@string/preference_internal_player"/>-->
    <Preference
        android:key="license_dialog"
        android:title="@string/preference_licenses">
    </Preference>
</PreferenceScreen>